// 版本号
syntax = "proto3";

option go_package = ".;proto"; // 生成的go文件的存放地址，会自动生成目录 ; 生成的go文件所属的包名 （.代表当前路径）

// 指定包名
package proto;

// 定义结构体
message UserRequest {
  // 定义用户名
  string name = 1;
}

// 响应结构体
message UserResponse {
  // 这里定义的字段无需大写开头。转为go文件的时候会自动转为大写开头
  // 注意分号结尾
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  // repeated修饰符是可变数组，go转切片
  repeated string hobby = 4;
}

// service定义方法
service UserInfoService {
  rpc GetUserInfo (UserRequest) returns (UserResponse){}
}